--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>YAKUBU HANNAH BUBA Landing Page</title>
   </head>
   <body>
